package com.ilike.visitor;

/**
 * 动作抽象类
 */
public abstract class Action {

    public abstract void getManResult( Man man);
    public abstract void getWomanResult( Woman woman);
}
