package com.ilike.visitor;

public abstract class Person {

   abstract void  accespt(Action action);

}
